Bug 366697 - getCTM() shouldn't return the same matrix as .getScreenCTM() for nested SVG elements. r=longsonr